Use upstream gettext instead the Glib one

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,6 +18,7 @@ YELP_DEFINES =								\
 	-DPREFIX=\""$(prefix)"\"					\
 	-DSYSCONFDIR=\""$(sysconfdir)"\"				\
 	-DDATADIR=\""$(datadir)"\"					\
+	-DLOCALEDIR=\""$(localedir)"\"					\
 	-DLIBDIR=\""$(libdir)"\"					\
 	-DIMAGEDIR=\""$(datadir)/images/yelp"\"				\
 	-DSERVERDIR=\"$(libexecdir)\"					\
