--- a/configure.ac
+++ b/configure.ac
@@ -61,13 +61,14 @@ fi
 # i18n stuff
 IT_PROG_INTLTOOL([0.41.0])
 
+AM_GNU_GETTEXT([external])
+AM_GNU_GETTEXT_VERSION([0.17])
+
 GETTEXT_PACKAGE=yelp
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",
                    [The gettext translation domain])
 
-AM_GLIB_GNU_GETTEXT
-AM_GLIB_DEFINE_LOCALEDIR([GNOMELOCALEDIR])
 
 LIBLZMA_REQUIRED=4.9
 AC_ARG_ENABLE(lzma,
