Use a monospace font and &nbsp; for internal spacing.
Basically, to get internal spaces correct (eg in tables etc), we
*have* to use a monospace font.

--- a/stylesheets/man2html.xsl.in
+++ b/stylesheets/man2html.xsl.in
@@ -60,7 +60,7 @@
     <xsl:attribute name="style">
       <xsl:text>padding-left: </xsl:text>
       <xsl:value-of select="@indent"/>
-      <xsl:text>em;</xsl:text>
+      <xsl:text>em; font-family: monospace;</xsl:text>
     </xsl:attribute>
 
     <p>
