--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -9,6 +9,7 @@ libyelp/yelp-debug.c
 libyelp/yelp-docbook-document.c
 libyelp/yelp-document.c
 libyelp/yelp-error.c
+libyelp/yelp-help-list.c
 libyelp/yelp-info-document.c
 libyelp/yelp-location-entry.c
 libyelp/yelp-lzma-decompressor.c
