--- a/stylesheets/man2html.xsl.in
+++ b/stylesheets/man2html.xsl.in
@@ -74,7 +74,7 @@
       margin-bottom: 0px;
       margin-top: <xsl:value-of select="@jump"/>em;
     </xsl:attribute>
-    <p><xsl:apply-templates select="span|br"/></p>
+    <p><xsl:apply-templates select="span|br|a"/></p>
   </xsl:element>
 </xsl:template>
 
@@ -94,6 +94,16 @@
     </xsl:choose>
 
     <xsl:value-of select="."/>
+  </xsl:element>
+</xsl:template>
+
+<xsl:template match="a">
+  <xsl:element name="a">
+    <xsl:attribute name="href">
+      <xsl:value-of select="@href"/>
+    </xsl:attribute>
+
+    <xsl:apply-templates select="span|br"/>
   </xsl:element>
 </xsl:template>
 
