--- a/stylesheets/man2html.xsl.in
+++ b/stylesheets/man2html.xsl.in
@@ -21,6 +21,18 @@
 </xsl:template>
 
 <xsl:template mode="html.body.mode" match="Man">
+  <!-- Invisible div that we use to calculate the indent width. -->
+  <xsl:element name="div">
+    <xsl:attribute name="id">invisible-char</xsl:attribute>
+    <xsl:attribute name="style">
+      position: absolute;
+      font-family: monospace;
+      visibility: hidden;
+      height: auto;
+      width: auto;
+    </xsl:attribute>
+    <xsl:text>X</xsl:text>
+  </xsl:element>
   <xsl:apply-templates select="header"/>
   <xsl:apply-templates select="section"/>
 </xsl:template>
@@ -73,7 +85,9 @@
     <xsl:attribute name="style">
       margin-bottom: 0px;
       margin-top: <xsl:value-of select="@jump"/>em;
+      margin-left: <xsl:value-of select="@indent"/>ex;
     </xsl:attribute>
+    <xsl:attribute name="class">sheet</xsl:attribute>
     <p><xsl:apply-templates select="span|br|a"/></p>
   </xsl:element>
 </xsl:template>
@@ -106,5 +120,36 @@
     <xsl:apply-templates select="span|br"/>
   </xsl:element>
 </xsl:template>
+
+<xsl:template name="html.head.custom">
+<!--
+  The following javascript function fixes up the indent of sheets
+  correctly. The indent should be some number of character widths, but
+  you can't do that in CSS, so we have something like "7ex" as a
+  stand-in (but ex is too thin here). There's an invisible div with
+  the correct styling and a single character which we measure the
+  width of and update each sheet as required.
+-->
+<script type="text/javascript" language="javascript">
+<xsl:text>
+$(document).ready (function () {
+  var div = document.getElementById("invisible-char");
+  var width = div.clientWidth;
+
+  var all_divs = document.getElementsByTagName("div");
+  for (var i=0; i &lt; all_divs.length; i++) {
+    var elt = all_divs[i];
+    if (elt.getAttribute("class") == "sheet") {
+      var indent_str = elt.style.marginLeft;
+      var indent = indent_str.substr (0, indent_str.length - 2);
+
+      elt.style.marginLeft = width * indent + "px";
+    }
+  }
+});
+</xsl:text>
+</script>
+</xsl:template>
+
 
 </xsl:stylesheet>
