yelp-docbook-document: Provide named entities without docbook-dtds

--- a/configure.ac
+++ b/configure.ac
@@ -207,6 +207,7 @@ stylesheets/man2html.xsl
 stylesheets/toc2html.xsl
 stylesheets/yelp-common.xsl
 data/Makefile
+data/dtd/Makefile
 data/icons/Makefile
 data/icons/hicolor/Makefile
 data/icons/hicolor/16x16/Makefile
