Remove bookmark directory from page, no editor, use symbolic
I've removed the bookmarks editor dialog, because you can't do
much editing anyway. Instead, you can now remove a bookmark to
the page you're on. There's a menu item for this, and the icon
in the location entry is now a toggle.

I did the toggle icon with the new symbolic icons, changing
the fill color for bookmarked/unbookmarked. And while I was
in there, I used symbolic icons for the search and clear
icons in the search entry as well.

--- a/configure.ac
+++ b/configure.ac
@@ -212,6 +212,8 @@ data/icons/Makefile
 data/icons/hicolor/Makefile
 data/icons/hicolor/16x16/Makefile
 data/icons/hicolor/16x16/status/Makefile
+data/icons/hicolor/scalable/Makefile
+data/icons/hicolor/scalable/actions/Makefile
 po/Makefile.in
 tests/Makefile
 yelp.desktop.in
