--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -18,6 +18,8 @@ libyelp/yelp-mallard-document.c
 libyelp/yelp-man-document.c
 libyelp/yelp-settings.c
 libyelp/yelp-simple-document.c
+libyelp/yelp-sqlite-storage.c
+libyelp/yelp-storage.c
 libyelp/yelp-transform.c
 libyelp/yelp-uri.c
 libyelp/yelp-view.c
