Don't crash when g-i-t-symbolic not installed, use symbolic properly

--- a/data/icons/hicolor/scalable/actions/Makefile.am
+++ b/data/icons/hicolor/scalable/actions/Makefile.am
@@ -1,5 +1,5 @@
 icondir = $(datadir)/yelp/icons/hicolor/scalable/actions
 
-icon_DATA = yelp-bookmark-symbolic.svg
+icon_DATA = yelp-bookmark-add-symbolic.svg yelp-bookmark-remove-symbolic.svg
 
 EXTRA_DIST = $(icon_DATA)
