data/dtd/catalog: Use actual installed DTDs, not those in my home dir; #647713

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ Makefile.in
 /data/info.xml
 /data/man.xml
 /data/toc.xml
+/data/dtd/catalog
 /depcomp
 /docs/libyelp/html-build.stamp
 /docs/libyelp/html.stamp
