Massive cleanup of old files

--- a/.gitignore
+++ b/.gitignore
@@ -26,12 +26,29 @@ Makefile.in
 /config.status
 /config.sub
 /configure
-/data/gsettings_schema_validate_stamp
-/data/info.xml
-/data/man.xml
-/data/toc.xml
-/data/dtd/catalog
 /depcomp
+/ltmain.sh
+/m4
+/missing
+/mkinstalldirs
+/gtk-doc.make
+/install-sh
+/intltool-extract.in
+/intltool-merge.in
+/intltool-update.in
+/libtool
+/stamp-h1
+/yelp.desktop
+/yelp.desktop.in
+
+/data/org.gnome.yelp.gschema.valid
+/data/dtd/catalog
+/data/xslt/db2html.xsl
+/data/xslt/info2html.xsl
+/data/xslt/mal2html.xsl
+/data/xslt/man2html.xsl
+/data/xslt/yelp-common.xsl
+
 /docs/libyelp/html-build.stamp
 /docs/libyelp/html.stamp
 /docs/libyelp/html/
@@ -56,21 +73,13 @@ Makefile.in
 /docs/libyelp/tmpl/
 /docs/libyelp/version.xml
 /docs/libyelp/xml/
-/gtk-doc.make
-/install-sh
-/intltool-extract.in
-/intltool-merge.in
-/intltool-update.in
-/libtool
+
 /libyelp/stamp-yelp-marshal.h
 /libyelp/yelp-marshal.c
 /libyelp/yelp-marshal.h
 /libyelp/yelp-types.c
 /libyelp/yelp-types.h
-/ltmain.sh
-/m4
-/missing
-/mkinstalldirs
+
 /po/*.gmo
 /po/.intltool-merge-cache
 /po/Makefile.in.in
@@ -78,15 +87,9 @@ Makefile.in
 /po/POTFILES
 /po/stamp-it
 /po/yelp.pot
+
 /src/yelp
-/src/yelp-dbus.h
-/stamp-h1
-/stylesheets/db-title.xsl
-/stylesheets/db2html.xsl
-/stylesheets/info2html.xsl
-/stylesheets/mal2html.xsl
-/stylesheets/toc2html.xsl
-/stylesheets/yelp-common.xsl
+
 /tests/test-bz2
 /tests/test-io-channel
 /tests/test-location-entry
@@ -96,5 +99,3 @@ Makefile.in
 /tests/test-transform
 /tests/test-uri
 /tests/test-view
-/yelp.desktop
-/yelp.desktop.in
