--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
 
-SUBDIRS = libyelp src stylesheets po data tests docs
+SUBDIRS = libyelp src po data tests docs
 
 @INTLTOOL_DESKTOP_RULE@
 
@@ -8,16 +8,12 @@ desktopdir = $(datadir)/applications
 desktop_in_files=yelp.desktop.in.in
 desktop_DATA = $(desktop_in_files:.desktop.in.in=.desktop)
 
-yelpdatadir = $(datadir)/yelp
-yelpdata_DATA = important_docs.xml
-
 EXTRA_DIST = 						\
 	autogen.sh					\
 	MAINTAINERS					\
 	intltool-extract.in  				\
 	intltool-merge.in    				\
 	intltool-update.in				\
-	important_docs.xml				\
 	$(desktop_in_files)
 
 DISTCLEANFILES = 					\
