--- a/data/xslt/yelp-common.xsl.in
+++ b/data/xslt/yelp-common.xsl.in
@@ -93,7 +93,7 @@ div.body {
 
 <!-- == html.js.custom == -->
 <xsl:template name="html.js.custom">
-<script type="text/javascript" language="javascript" src="@DATADIR@/jquery-ui-1.8.custom.min.js"/>
+<script type="text/javascript" language="javascript" src="@DATADIR@/js/jquery-ui-1.8.custom.min.js"/>
 </xsl:template>
 
 <!-- == html.js.content.custom == -->
