yelp.desktop: Added Unity to OnlyShowIn

--- a/yelp.desktop.in.in
+++ b/yelp.desktop.in.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 _Name=Help
 _Comment=Get help with GNOME
-OnlyShowIn=GNOME;
+OnlyShowIn=GNOME;Unity;
 Exec=yelp %u
 Icon=help-browser
 StartupNotify=true
