Dropped jquery-ui, using CSS transitions
We were only using it to be able to animate background colors.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = dtd icons js xslt
+SUBDIRS = dtd icons xslt
 
 #This has to be defined, because GSETTINGS_CHECK_RULE adds to it
 MOSTLYCLEANFILES =
