--- a/data/xslt/mal2html.xsl.in
+++ b/data/xslt/mal2html.xsl.in
@@ -55,6 +55,11 @@ a.linkdiv:hover {
     <xsl:value-of select="$color.blue_background"/><xsl:text>), to(</xsl:text>
     <xsl:value-of select="$color.background"/><xsl:text>));
 }
+div.fullsearch {
+  text-align: center;
+  max-width: 20em;
+  margin: 0 auto 1em auto;
+}
 </xsl:text>
 <xsl:if test="$yelp.editor_mode">
 <xsl:text>
