--- a/data/xslt/mal2html.xsl.in
+++ b/data/xslt/mal2html.xsl.in
@@ -55,10 +55,21 @@ a.linkdiv:hover {
     <xsl:value-of select="$color.blue_background"/><xsl:text>), to(</xsl:text>
     <xsl:value-of select="$color.background"/><xsl:text>));
 }
-div.fullsearch {
+a.fullsearch {
+  display: block;
   text-align: center;
   max-width: 20em;
   margin: 0 auto 1em auto;
+  pading: 0.2em;
+  background-color: </xsl:text>
+    <xsl:value-of select="$color.yellow_background"/><xsl:text>;
+  border: solid 1px </xsl:text>
+    <xsl:value-of select="$color.yellow_border"/><xsl:text>;
+}
+a.fullsearch:hover {
+  text-decoration: none;
+  border: solid 1px </xsl:text>
+    <xsl:value-of select="$color.blue_border"/><xsl:text>;
 }
 </xsl:text>
 <xsl:if test="$yelp.editor_mode">
