--- a/data/xslt/yelp-common.xsl.in
+++ b/data/xslt/yelp-common.xsl.in
@@ -55,6 +55,7 @@ body {
   background-color: </xsl:text><xsl:value-of select="$color.background"/><xsl:text>;
   max-width: 100%;
 }
+div.all { border: none; }
 div.header {
   max-width: 100%;
   width: 100%;
