--- a/data/xslt/yelp-common.xsl.in
+++ b/data/xslt/yelp-common.xsl.in
@@ -55,12 +55,21 @@ body {
   background-color: </xsl:text><xsl:value-of select="$color.background"/><xsl:text>;
   max-width: 100%;
 }
-div.all { border: none; }
+div.all {
+  border: none;
+  margin: 0;
+  width: 100%;
+  max-width: 100%;
+}
 div.header {
   max-width: 100%;
   width: 100%;
   padding: 0;
-  margin: 0 0 1em 0;
+  margin: 0 auto 1em auto;
+}
+div.body, div.footer {
+  margin: 0;
+  max-width: 60em;
 }
 div.code {
   -webkit-box-shadow: 0px 0px 4px </xsl:text><xsl:value-of select="$color.gray_border"/><xsl:text>;
