yelp-commont.xsl: Changed div.all to div.page

--- a/data/xslt/yelp-common.xsl.in
+++ b/data/xslt/yelp-common.xsl.in
@@ -55,7 +55,7 @@ body {
   background-color: </xsl:text><xsl:value-of select="$color.background"/><xsl:text>;
   max-width: 100%;
 }
-div.all {
+div.page {
   border: none;
   margin: 0;
   width: 100%;
