--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,7 @@
 # Add files with translateable strings here.
 # Please keep this file sorted alphabetically.
 [encoding: UTF-8]
+data/domains/yelp.pot
 libyelp/yelp-bz2-decompressor.c
 libyelp/yelp-debug.c
 libyelp/yelp-docbook-document.c
