Fixed my mistake in generating yelp.pot for xslt translations
I was generating the POT file from the generated yelp.xml instead
of from the source yelp.xml.in. Since the generated file doesn't
have the ITS rules, <string/> was not withinText, so itstool used
a placeholder, so no translations actually matched.

I fixed the Makefile and all of the translations.

Also, I was using ALL_LINGUAS to create the POT file, just like
yelp-xsl does. But I wasn't setting ALL_LINGUAS in configure.ac.
Fixed.

--- a/configure.ac
+++ b/configure.ac
@@ -62,6 +62,9 @@ fi
 # i18n stuff
 IT_PROG_INTLTOOL([0.41.0])
 
+ALL_LINGUAS="`grep -v '^#' "$srcdir/po/LINGUAS" | tr '\n' ' '`"
+AC_SUBST(ALL_LINGUAS)
+
 AM_GNU_GETTEXT([external])
 AM_GNU_GETTEXT_VERSION([0.17])
 
