Include gettext xslt in man and info, fix warnings

--- a/data/xslt/info2html.xsl.in
+++ b/data/xslt/info2html.xsl.in
@@ -9,6 +9,7 @@
 <xsl:import href="@XSL_COLOR@"/>
 <xsl:import href="@XSL_ICONS@"/>
 <xsl:import href="@XSL_HTML@"/>
+<xsl:import href="@XSL_GETTEXT@"/>
 <xsl:include href="yelp-common.xsl"/>
 
 <xsl:template name="linktrails">
