--- a/data/domains/Makefile.am
+++ b/data/domains/Makefile.am
@@ -6,21 +6,12 @@ yelp.pot: yelp.xml.in
 all: yelp.xml yelp.pot
 
 yelp.xml: yelp.xml.in
-	@echo "  GEN    $@"; \
-	if [ ! -d .yelp ]; then mkdir .yelp; fi; \
-	echo '<files>' > ".yelp.files"; \
-	echo '<source href="yelp.xml.in"/>' >> ".yelp.files"; \
+	$(AM_V_GEN) ( \
 	for lang in $(ALL_LINGUAS); do \
-	  msgfmt -o ".yelp/$$lang.mo" "$(top_srcdir)/po/$$lang.po" || exit 1; \
-	  (cd .yelp && itstool -o "$$lang.xml" -m "$$lang.mo" "../yelp.xml.in") || exit 1; \
-	  rm ".yelp/$$lang.mo" || exit 1; \
-	  echo '<file href="'".yelp/$$lang.xml"'"/>' >> ".yelp.files"; \
+	  msgfmt -o "$$lang.mo" "$(top_srcdir)/po/$$lang.po" || exit 1; \
 	done; \
-	echo '</files>' >> ".yelp.files"; \
-	xsltproc -o "$@" "$(srcdir)/msgs.xsl" ".yelp.files" || exit 1; \
-	for lang in $(ALL_LINGUAS); do rm ".yelp/$$lang.xml"; done; \
-	rmdir .yelp; \
-	rm .yelp.files
+	itstool -o "$@" -j "$^" $(foreach ll,$(ALL_LINGUAS),$(ll).mo); \
+	rm $(foreach ll,$(ALL_LINGUAS),$(ll).mo))
 
 xsldir=$(datadir)/yelp-xsl/xslt/common/domains
 
