--- a/yelp.desktop.in.in
+++ b/yelp.desktop.in.in
@@ -1,6 +1,7 @@
 [Desktop Entry]
 _Name=Help
 _Comment=Get help with GNOME
+_Keywords=documentation;information;manual;
 OnlyShowIn=GNOME;Unity;
 Exec=yelp %u
 Icon=help-browser
