yelp.pot: Don't regenerate on "make all"

--- a/data/domains/yelp.xml.in
+++ b/data/domains/yelp.xml.in
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><!-- -*- indent-tabs-mode: nil -*- -->
 
+<!--
+Making a change? Make sure to run:
+$ make yelp.pot
+-->
+
 <l10n xmlns="http://projects.gnome.org/yelp/gettext/"
       xmlns:msg="http://projects.gnome.org/yelp/gettext/"
       xmlns:its="http://www.w3.org/2005/11/its"
