Stop checking for pangox and X11
Yelp doesn't use pangox or X11 directly, so there's no need
for these checks.

https://bugzilla.gnome.org/show_bug.cgi?id=694793

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,8 +27,7 @@ yelp_CFLAGS =					\
 yelp_LDADD =					\
 	$(top_builddir)/libyelp/libyelp.la	\
 	$(YELP_LIBS)				\
-	$(POPT_LIBS)				\
-	$(X_LIBS)
+	$(POPT_LIBS)
 
 yelp_LDFLAGS = $(AM_LDFLAGS)
 
