--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,6 +2,7 @@
 # Please keep this file sorted alphabetically.
 [encoding: UTF-8]
 data/domains/yelp.pot
+data/yelp.appdata.xml.in
 libyelp/yelp-bz2-decompressor.c
 libyelp/yelp-debug.c
 libyelp/yelp-docbook-document.c
