Fix AppData file validity

--- a/data/yelp.appdata.xml.in
+++ b/data/yelp.appdata.xml.in
@@ -11,7 +11,7 @@ Yelp development has led to the development of various tools, and the Mallard an
 </_p>
 </description>
 <screenshots>
-<screenshot type="default">https://wiki.gnome.org/Apps/Yelp?action=AttachFile&do=view&target=yelp_screenshot.png</screenshot>
+<screenshot type="default">https://wiki.gnome.org/Apps/Yelp?action=AttachFile&amp;do=view&amp;target=yelp_screenshot.png</screenshot>
 </screenshots>
 <url type="homepage">https://wiki.gnome.org/Apps/Yelp</url>
 <updatecontact>gnome-doc-devel-list@gnome.org</updatecontact>
